// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildDeliveryOptions function should build proper nodes days as with number 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <delivery-options>
    <option cost=\\"300\\" days=\\"1\\" order-before=\\"12\\"/>
  </delivery-options>
</root>"
`;

exports[`buildDeliveryOptions function should build proper nodes with days as empty string 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <delivery-options>
    <option cost=\\"300\\" days=\\"\\" order-before=\\"12\\"/>
  </delivery-options>
</root>"
`;

exports[`buildDeliveryOptions function should build proper nodes with days as tuple 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <delivery-options>
    <option cost=\\"300\\" days=\\"1-20\\" order-before=\\"12\\"/>
  </delivery-options>
</root>"
`;

exports[`buildOfferPrice function should build proper nodes from number 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <price>1490</price>
</root>"
`;

exports[`buildOfferPrice function should build proper nodes from object 1`] = `
"<?xml version=\\"1.0\\"?>
<root>
  <price from=\\"true\\">1490</price>
</root>"
`;

exports[`yml function \`create\` method should generate YML 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<yml_catalog date=\\"2017-09-07 00:00\\">
  <shop>
    <name>BestSeller</name>
    <company>Tne Best inc.</company>
    <url>http://best.seller.ru</url>
    <currencies>
      <currency id=\\"RUR\\" rate=\\"1\\"/>
      <currency id=\\"USD\\" rate=\\"60\\"/>
    </currencies>
    <categories>
      <category id=\\"1\\">Бытовая техника</category>
      <category id=\\"10\\" parentId=\\"1\\">Мелкая техника для кухни</category>
      <category id=\\"101\\" parentId=\\"10\\">Сэндвичницы и приборы для выпечки</category>
      <category id=\\"102\\" parentId=\\"10\\">Мороженицы</category>
    </categories>
    <delivery-options>
      <option cost=\\"300\\" days=\\"1-20\\" order-before=\\"12\\"/>
    </delivery-options>
    <offers>
      <offer id=\\"12346\\" available=\\"true\\" bid=\\"80\\" cbid=\\"90\\" fee=\\"325\\">
        <url>http://best.seller.ru/product_page.asp?pid=12348</url>
        <price>1490</price>
        <oldprice>1620</oldprice>
        <currencyId>RUR</currencyId>
        <categoryId>101</categoryId>
        <picture>http://best.seller.ru/img/large_12348.jpg</picture>
        <store>false</store>
        <pickup>true</pickup>
        <delivery>true</delivery>
        <delivery-options>
          <option cost=\\"300\\" days=\\"0\\" order-before=\\"12\\"/>
        </delivery-options>
        <name>Вафельница First FA-5300</name>
        <vendor>First</vendor>
        <vendorCode>A1234567B</vendorCode>
        <description>&lt;![CDATA[
            &lt;p&gt;Отличный подарок для любителей венских вафель.&lt;/p&gt;
          ]]&gt;</description>
        <sales_notes>Необходима предоплата.</sales_notes>
        <manufacturer_warranty>true</manufacturer_warranty>
        <country_of_origin>Россия</country_of_origin>
        <barcode>0156789012</barcode>
        <cpa>1</cpa>
        <rec>123,456</rec>
      </offer>
    </offers>
  </shop>
</yml_catalog>"
`;
